trunk/Archive2/97/68ed70060e21f7/output
main.cpp:38:35: error: use of undeclared identifier 'value'
        BOOST_SPIRIT_DEBUG_NODES((value)(entry))
                                  ^
/usr/local/include/boost/spirit/home/qi/nonterminal/debug_handler.hpp:142:57: note: expanded from macro 'BOOST_SPIRIT_DEBUG_NODES'
    BOOST_PP_SEQ_FOR_EACH(BOOST_SPIRIT_DEBUG_NODE_A, _, seq)                    \
                                                        ^
/usr/local/include/boost/preprocessor/seq/for_each.hpp:26:80: note: expanded from macro 'BOOST_PP_SEQ_FOR_EACH'
#    define BOOST_PP_SEQ_FOR_EACH(macro, data, seq) BOOST_PP_FOR((macro, data, seq (nil)), BOOST_PP_SEQ_FOR_EACH_P, BOOST_PP_SEQ_FOR_EACH_O, BOOST_PP_SEQ_FOR_EACH_M)
                                                                               ^
/usr/local/include/boost/preprocessor/repetition/detail/for.hpp:22:78: note: expanded from macro 'BOOST_PP_FOR_1'
# define BOOST_PP_FOR_1(s, p, o, m) BOOST_PP_FOR_1_C(BOOST_PP_BOOL(p(2, s)), s, p, o, m)
                                                                             ^
note: (skipping 10 expansions in backtrace; use -fmacro-backtrace-limit=0 to see all)
/usr/local/include/boost/preprocessor/seq/elem.hpp:44:41: note: expanded from macro 'BOOST_PP_SEQ_ELEM_III'
#    define BOOST_PP_SEQ_ELEM_III(x, _) x
                                        ^
/usr/local/include/boost/spirit/home/qi/nonterminal/debug_handler.hpp:138:29: note: expanded from macro 'BOOST_SPIRIT_DEBUG_NODE_A'
    BOOST_SPIRIT_DEBUG_NODE(name);                                              \
                            ^
/usr/local/include/boost/spirit/home/qi/nonterminal/debug_handler.hpp:133:41: note: expanded from macro 'BOOST_SPIRIT_DEBUG_NODE'
    #define BOOST_SPIRIT_DEBUG_NODE(r)  r.name(#r)
                                        ^
1 error generated.
